--- a/Frontend/gowin/index.html
+++ b/Frontend/gowin/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Base URL for proper routing -->
+    <base href="/" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@700&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
