--- a/Frontend/gowin/index.html
+++ b/Frontend/gowin/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/src/assets/gowin.jpg" type="image/jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <base href="./" />
 
   <!-- Professional Typography: Playfair Display + Inter -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +23,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="./src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 
 </body>
