--- a/Frontend/gowin/index.html
+++ b/Frontend/gowin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/src/assets/gowin.jpg" type="image/jpeg" />
+  <link rel="icon" href="/src/assets/favicon_io/favicon-32x32.png" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Professional Typography: Playfair Display + Inter -->
